src/test/ui/issues/issue-50714-1.stderr
error[E0647]: start function is not allowed to have a `where` clause
  --> $DIR/issue-50714-1.rs:9:50
   |
LL | fn start(_: isize, _: *const *const u8) -> isize where fn(&()): Eq {
   |                                                  ^^^^^^^^^^^^^^^^^ start function cannot have a `where` clause

error: aborting due to previous error

For more information about this error, try `rustc --explain E0647`.
